:lipstick: Fix spacings on mobile about

--- a/src/components/about/styles.styl
+++ b/src/components/about/styles.styl
@@ -8,7 +8,7 @@
   a
     text-decoration: underline
   +mobile()
-    margin-top: pxToRem(10)
+    margin-top: pxToRem(12)
     margin-bottom: 0
   &Description
     childrenSpacingY(pxToRem(40))
@@ -19,7 +19,7 @@
     display: flex
     childrenSpacingX(pxToRem(40))
     +mobile()
-      margin-top: pxToRem(50)
+      margin-top: pxToRem(53)
       flex-direction: column
       childrenSpacingX(0)
       childrenSpacingY(pxToRem(20))
@@ -36,5 +36,3 @@
         margin-bottom: pxToRem(20)
     +mobile()
       childrenSpacingY(pxToRem(10))
-
-
